version increase, fixed z-index
git-svn-id: https://plugins.svn.wordpress.org/scroll-triggered-boxes/tags/1.1.9.3@871295 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,14 @@
-html, body{ min-height: 100%; }
+html, 
+body { 
+	min-height: 100% !important; 
+	height: auto !important; 
+}
 
 .stb { 
 	position:fixed; 
 	right: 10px; 
 	bottom: 10px; 
-	z-index:999;
+	z-index: 999999;
 	-moz-box-shadow: 0 0 10px 1px #888;
 	-webkit-box-shadow: 0 0 10px 1px #888;
 	box-shadow: 0 0 10px 1px #888;
